[gd_scene load_steps=5 format=3 uid="uid://4i6kl0xurgeg"]

[ext_resource type="Script" uid="uid://dqo675n5we5gk" path="res://ui/main_menu/main_menu.gd" id="1_omy8q"]
[ext_resource type="Theme" uid="uid://dswsb3nw14dn7" path="res://ui/styles/themes/menu_theme.tres" id="1_uhj5c"]
[ext_resource type="FontFile" uid="uid://g71rdl455gfw" path="res://assets/fonts/RobotoMono-Medium.ttf" id="2_mu8pm"]

[sub_resource type="LabelSettings" id="LabelSettings_uhj5c"]
font = ExtResource("2_mu8pm")
font_size = 150
shadow_size = 20
shadow_color = Color(0, 0, 0, 0.95600003)
shadow_offset = Vector2(10, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_omy8q")
direct_init = false

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 100

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "WAVE TOWER"
label_settings = SubResource("LabelSettings_uhj5c")
horizontal_alignment = 1

[node name="NewRunButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_uhj5c")
text = "New Run"

[node name="CreditsButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_uhj5c")
text = "Credits
"

[node name="ExitButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_uhj5c")
text = "Exit
"

[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/NewRunButton" to="." method="_on_new_run_button_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
